# Cloud-Backend-Service

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  cert.pem  key.pem
src/: db.rs  jwt.rs  main.rs  middleware.rs  models.rs  reserr.rs  utils.rs
src/handlers/: admin.rs  file.rs  folder.rs  login.rs  mod.rs  user.rs
static/: asset-manifest.json  index.html
static/static/css/: 2.83b12fa4.chunk.css  2.83b12fa4.chunk.css.map
static/static/js/: 2.279ef660.chunk.js  2.6e656de9.chunk.js  main.634fae60.chunk.js  main.634fae60.chunk.js.map  main.67e7ee59.chunk.js  main.67e7ee59.chunk.js.map
storage/: Text.tsx  aaaa.txt  php.php
