[package]
name = "cloud"
version = "0.1.0"
authors = ["dejvi <dejviddvorak146@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.2", features = ["openssl"] }
actix-files = "0.5.0"
actix-multipart = "0.3.0"
actix-rt = "1.1.1"
futures = "0.3.1"
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0"
jsonwebtoken = "7.2.0"
r2d2_sqlite = "0.17.0"
r2d2 = "0.8.2"
bcrypt = "0.8"
openssl = { version = "0.10", features = ["vendored"] }
validator = { version = "0.12", features = ["derive"] } # nevim no
chrono = "0.4" # nevim no

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]